--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!-- was lang="Default" -->
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="web design, design agency, logo design atlanta">
+	<meta name="keywords" content="web design, design agency, logo design atlanta"><!-- changed keywords -->
 	<meta name="description" content="I'm Mike and your should hire me to build your website">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js"></script>
 	<script src="./js/gmaps.js"></script>
 	
-	<title>GoMike Designs</title>
+	<title>GoMike Designs</title><!-- was added GoMike Designs -->
 	
 	<!-- Analytics -->
 	<!-- Analytics END -->
@@ -29,7 +29,7 @@
 	<main class="page-container">
 		
 		<!-- bloc-0 -->
-		<section class="bloc bgc-white l-bloc " id="bloc-0">
+		<section class="bloc bgc-white l-bloc " id="bloc-0"><!-- using HTML semantic elements --> 
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
