--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
+						<!-- moved slyle from HTML to CSS --> 
 						<a class="navbar-brand" href="index.html"><img src="img/atlanta_web_design_logo.png" alt="logo, seo, google, website, internet, web design, design agency"></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
