--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<!-- moved slyle from HTML to CSS --> 
-						<a class="navbar-brand" href="index.html"><img src="img/atlanta_web_design_logo.png" alt="logo, seo, google, website, internet, web design, design agency"></a>
+						<a class="navbar-brand" href="index.html"><img src="img/atlanta_web_design_logo.png" alt="logo, seo, google, website, internet, web design, design agency"></a><!-- moved slyle height="40" from HTML to CSS -->
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
@@ -63,7 +63,7 @@
 							I'm Mike.
 						</h1>
 						<div class="text-center">
-							<a href="Contactme.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+							<a href="Contacts.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -199,7 +199,7 @@
 						Ready for a great website? <br>Let&rsquo;s design!
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="Contactme.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+						<a href="Contacts.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
 			</div>
