--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@
 			</div>
 		</section>
 		<!-- bloc-5-cta END -->
+		<!-- ScrollToTop Button -->
+           <div>
+	           <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+	       </div>
+	    <!-- ScrollToTop Button END-->
 		<!-- Footer - bloc-8 -->
 		<footer class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
@@ -239,38 +244,38 @@
 							<div class="col-sm-4">
 								<p>Partners:</p>
 								<ul>
-									<li><a href="car.com">car.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="myroof.com">myroof.com</a></li>
-									<li><a href="realestateseo.com">realestateseo.com</a></li>
+									<li><a href="www.car.com">car.com</a></li>
+									<li><a href="www.pizza.com">pizza.com</a></li>
+									<li><a href="www.myroof.com">myroof.com</a></li>
+									<li><a href="www.realestateseo.com">realestateseo.com</a></li>
 								</ul>		
 							</div>
 							<div class="col-sm-4">
 								<p>Directories 1:</p>
 								<ul>
-									<li><a href="agencydirectory.com">agencydirectory.com</a></li>
-									<li><a href="seodirectory.com">seodirectory.com</a></li>
-									<li><a href="marketingdirectory.com">marketingdirectory.com</a></li>
-									<li><a href="123seo.com">123seo.com</a></li>
-									<li><a href="123site.com">123site.com</a></li>
-									<li><a href="wordpressdirectory.com">wordpressdirectory.com</a></li>
-									<li><a href="agencylistatl.com">agencylistatl.com</a></li>
-									<li><a href="bestagencyatl.com">bestagencyatl.com</a></li>
-									<li><a href="seolist.com">seolist.com</a></li>
+									<li><a href="www.agencydirectory.com">agencydirectory.com</a></li>
+									<li><a href="www.seodirectory.com">seodirectory.com</a></li>
+									<li><a href="www.marketingdirectory.com">marketingdirectory.com</a></li>
+									<li><a href="www.123seo.com">123seo.com</a></li>
+									<li><a href="www.123site.com">123site.com</a></li>
+									<li><a href="www.wordpressdirectory.com">wordpressdirectory.com</a></li>
+									<li><a href="www.agencylistatl.com">agencylistatl.com</a></li>
+									<li><a href="www.bestagencyatl.com">bestagencyatl.com</a></li>
+									<li><a href="www.seolist.com">seolist.com</a></li>
 								</ul>
 							</div>
 							<div class="col-sm-4">
 								<p>Directories 2:</p>
 								<ul>
-									<li><a href="betterseo.com">betterseo.com</a></li>
-									<li><a href="yesseo.com">yesseo.com</a></li>
-									<li><a href="seojuicelink.com">seojuicelink.com</a></li>
-									<li><a href="bestlinks.com">bestlinks.com</a></li>
-									<li><a href="linkalot.com">linkalot.com</a></li>
-									<li><a href="backlink.com">backlink.com</a></li>
-									<li><a href="linkjuicedirectory.com">linkjuicedirectory.com</a></li>
-									<li><a href="rankongoogle.com">rankongoogle.com</a></li>
-									<li><a href="trustedseo.com">trustedseo.com</a></li>
+									<li><a href="www.betterseo.com">betterseo.com</a></li>
+									<li><a href="www.yesseo.com">yesseo.com</a></li>
+									<li><a href="www.seojuicelink.com">seojuicelink.com</a></li>
+									<li><a href="www.bestlinks.com">bestlinks.com</a></li>
+									<li><a href="www.linkalot.com">linkalot.com</a></li>
+									<li><a href="www.backlink.com">backlink.com</a></li>
+									<li><a href="www.linkjuicedirectory.com">linkjuicedirectory.com</a></li>
+									<li><a href="www.rankongoogle.com">rankongoogle.com</a></li>
+									<li><a href="www.trustedseo.com">trustedseo.com</a></li>
 								</ul>
 							</div>
 						</article>
