--- a/Contacts.html
+++ b/Contacts.html
@@ -148,6 +148,45 @@
 						</div>
 					</div>
 				</div>
+				<article class="row">
+					<div class="col-sm-4">
+						<p>Partners:</p>
+						<ul>
+							<li><a href="www.car.com">car.com</a></li>
+							<li><a href="www.pizza.com">pizza.com</a></li>
+							<li><a href="www.myroof.com">myroof.com</a></li>
+							<li><a href="www.realestateseo.com">realestateseo.com</a></li>
+						</ul>		
+					</div>
+					<div class="col-sm-4">
+						<p>Directories 1:</p>
+						<ul>
+							<li><a href="www.agencydirectory.com">agencydirectory.com</a></li>
+							<li><a href="www.seodirectory.com">seodirectory.com</a></li>
+							<li><a href="www.marketingdirectory.com">marketingdirectory.com</a></li>
+							<li><a href="www.123seo.com">123seo.com</a></li>
+							<li><a href="www.123site.com">123site.com</a></li>
+							<li><a href="www.wordpressdirectory.com">wordpressdirectory.com</a></li>
+							<li><a href="www.agencylistatl.com">agencylistatl.com</a></li>
+							<li><a href="www.bestagencyatl.com">bestagencyatl.com</a></li>
+							<li><a href="www.seolist.com">seolist.com</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-4">
+						<p>Directories 2:</p>
+						<ul>
+							<li><a href="www.betterseo.com">betterseo.com</a></li>
+							<li><a href="www.yesseo.com">yesseo.com</a></li>
+							<li><a href="www.seojuicelink.com">seojuicelink.com</a></li>
+							<li><a href="www.bestlinks.com">bestlinks.com</a></li>
+							<li><a href="www.linkalot.com">linkalot.com</a></li>
+							<li><a href="www.backlink.com">backlink.com</a></li>
+							<li><a href="www.linkjuicedirectory.com">linkjuicedirectory.com</a></li>
+							<li><a href="www.rankongoogle.com">rankongoogle.com</a></li>
+							<li><a href="www.trustedseo.com">trustedseo.com</a></li>
+						</ul>
+					</div>
+				</article>
 			</div>
 		</div>
 	</div>
