--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 							<div class="col-sm-4">
 								<p>Partners:</p>
 								<ul>
-									<li><a href="www.car.com">www.car.com</a></li>
+									<li><a href="https://www.car.com">www.car.com</a></li>
 									<li><a href="www.pizza.com">www.pizza.com</a></li>
 									<li><a href="www.myroof.com">www.myroof.com</a></li>
 									<li><a href="www.realestateseo.com">www.realestateseo.com</a></li>
