--- a/Contacts.html
+++ b/Contacts.html
@@ -152,38 +152,38 @@
 					<div class="col-sm-4">
 						<p>Partners:</p>
 						<ul>
-							<li><a href="www.car.com">www.car.com</a></li>
-							<li><a href="www.pizza.com">www.pizza.com</a></li>
-							<li><a href="www.myroof.com">www.myroof.com</a></li>
-							<li><a href="www.realestateseo.com">www.realestateseo.com</a></li>
+							<li><a href="https://www.car.com">www.car.com</a></li>
+							<li><a href="https://www.pizza.com">www.pizza.com</a></li>
+							<li><a href="https://www.myroof.com">www.myroof.com</a></li>
+							<li><a href="https://www.realestateseo.com">www.realestateseo.com</a></li>
 						</ul>		
 					</div>
 					<div class="col-sm-4">
 						<p>Directories 1:</p>
 						<ul>
-							<li><a href="www.agencydirectory.com">www.agencydirectory.com</a></li>
-							<li><a href="www.seodirectory.com">www.seodirectory.com</a></li>
-							<li><a href="www.marketingdirectory.com">www.marketingdirectory.com</a></li>
-							<li><a href="www.123seo.com">www.123seo.com</a></li>
-							<li><a href="www.123site.com">www.123site.com</a></li>
-							<li><a href="www.wordpressdirectory.com">www.wordpressdirectory.com</a></li>
-							<li><a href="www.agencylistatl.com">www.agencylistatl.com</a></li>
-							<li><a href="www.bestagencyatl.com">www.bestagencyatl.com</a></li>
-							<li><a href="www.seolist.com">www.seolist.com</a></li>
+							<li><a href="https://www.agencydirectory.com">www.agencydirectory.com</a></li>
+							<li><a href="https://www.seodirectory.com">www.seodirectory.com</a></li>
+							<li><a href="https://www.marketingdirectory.com">www.marketingdirectory.com</a></li>
+							<li><a href="https://www.123seo.com">www.123seo.com</a></li>
+							<li><a href="https://www.123site.com">www.123site.com</a></li>
+							<li><a href="https://www.wordpressdirectory.com">www.wordpressdirectory.com</a></li>
+							<li><a href="https://www.agencylistatl.com">www.agencylistatl.com</a></li>
+							<li><a href="https://www.bestagencyatl.com">www.bestagencyatl.com</a></li>
+							<li><a href="https://www.seolist.com">www.seolist.com</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
 						<p>Directories 2:</p>
 						<ul>
-							<li><a href="www.betterseo.com">www.betterseo.com</a></li>
-							<li><a href="www.yesseo.com">www.yesseo.com</a></li>
-							<li><a href="www.seojuicelink.com">www.seojuicelink.com</a></li>
-							<li><a href="www.bestlinks.com">www.bestlinks.com</a></li>
-							<li><a href="www.linkalot.com">www.linkalot.com</a></li>
-							<li><a href="www.backlink.com">www.backlink.com</a></li>
-							<li><a href="www.linkjuicedirectory.com">www.linkjuicedirectory.com</a></li>
-							<li><a href="www.rankongoogle.com">www.rankongoogle.com</a></li>
-							<li><a href="www.trustedseo.com">www.trustedseo.com</a></li>
+							<li><a href="https://www.betterseo.com">www.betterseo.com</a></li>
+							<li><a href="https://www.yesseo.com">www.yesseo.com</a></li>
+							<li><a href="https://www.seojuicelink.com">www.seojuicelink.com</a></li>
+							<li><a href="https://www.bestlinks.com">www.bestlinks.com</a></li>
+							<li><a href="https://www.linkalot.com">www.linkalot.com</a></li>
+							<li><a href="https://www.backlink.com">www.backlink.com</a></li>
+							<li><a href="https://www.linkjuicedirectory.com">www.linkjuicedirectory.com</a></li>
+							<li><a href="https://www.rankongoogle.com">www.rankongoogle.com</a></li>
+							<li><a href="https://www.trustedseo.com">www.trustedseo.com</a></li>
 						</ul>
 					</div>
 				</article>
