--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h1 alt="web agency, web design, logo design, atlanta agency, mike">I create websites and design graphics that help Atlanta<br>companies become attractive and recognizable online</h1>
+						<h1>I create websites and design graphics that help Atlanta<br>companies become attractive and recognizable online</h1>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -116,7 +116,7 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center text-center2">
-						<h2 alt="web agency, web design, logo design"><i>"Mike's an awesome <strong>freelance web designer!</strong> He captured the essence of our<br> company in our website and hes helped us <strong>double our online sales</strong> for our shop in Atlanta"<br></i>Taylor Cook, project manager Apple Delights</h2>
+						<h2><i>"Mike's an awesome <strong>freelance web designer!</strong> He captured the essence of our<br> company in our website and hes helped us <strong>double our online sales</strong> for our shop in Atlanta"<br></i>Taylor Cook, project manager Apple Delights</h2>
 					</div>
 				</div>
 			</div>
@@ -145,7 +145,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h1 alt="web agency, web design, logo design">Websites i've designed and developer for Atlanta<br> companies that resulted in more local business</h1>
+						<h1>Websites i've designed and developer for Atlanta<br> companies that resulted in more local business</h1>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
