--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<!-- moved slyle from HTML to CSS --> 
 						<a class="navbar-brand" href="index.html"><img src="img/atlanta_web_design_logo.png" alt="logo, seo, google, website, internet, web design, design agency"></a><!-- moved slyle height="40" from HTML to CSS -->
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only"><h4>Toggle navigation</h4></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
